@@ -1,5 +1,10 @@
 2010-04-27  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Improved
+	  dirty compiation unit merge.
+
+2010-04-27  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
 	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Added
 	  mergin of compilation units that contain errors.
